# QCViewer

./: .gitignore  CMakeLists.txt  ConsoleWidget.cpp  ConsoleWidget.h  GateIcon.cpp  GateIcon.h  LICENSE  Makefile  README  TFCLexer.cpp  TFCLexer.h  TFCLexer.l  TODO  build  cairo_tests.cpp  circuit.cpp  circuit.h  circuitParser.cpp  circuitParser.h  circuitwidget.cpp  circuitwidget.h  dirac.cpp  dirac.h  diracLexer.cpp  diracLexer.l  diracParser.cpp  diracParser.h  diracParser.y  diracTest.cpp  draw.cpp  draw.h  drawState.cpp  drawState.h  gate.cpp  gate.h  main.cpp  parseNode.h  qc.h  simTest.cpp  simulate.cpp  (+19 more)
QCLang/: QCLLexer.l  QCLParseNode.h  QCLParser.y  QCLParserUtils.cpp  QCLParserUtils.h  QCLTest.cpp  QCL_REPL.l  REPLInterperater.cpp  REPLInterperater.h  REPLInterpreter.cpp  test
QCLib/: CMakeLists.txt  circuitParser.cpp  circuitParser.h  diracTest.cpp  simulate.cpp  utility.h
QCLib/QCLang/: QCLParser.y  QCLParser.y.full  QCLParserUtils.cpp  QCLParserUtils.h  QCLTest.cpp  REPLInterpreter.h
QCLib/gates/: RGate.cpp  UGate.cpp  UGateLookup.h
QCLib/testCircuits/: 4b15g_5.tfc
armadillo/include/armadillo_bits/: config.hpp.cmake
cmake/modules/: FindCairo.cmake
demos/: 3qubitECC.qc  QFT6.qc  grover.tfc  primes.tfc
dirac/: diracLexer.l  diracParser.y  parseNode.h
docs/: .gitignore  Makefile  QCViewer.bib  QCViewer.tex  grover_circuit.eps
docs/manual/: Makefile  QCViewerDocumentation.tex
docs/manual/Figures/CreateCircuit/: CNOT.eps  EPRCircuit2.eps  TemplateCircuit.eps
docs/manual/Figures/Gates/: HadamardViewer.eps  PAdjointGateViewer.eps  PGateViewer.eps  RotXGateViewer.eps  RotYGateViewer.eps  RotZGateViewer.eps  SwapGateViewer.eps  TAdjointGateViewer.eps  TGateViewer.eps  XGateViewer.eps  YGateViewer.eps  ZGateViewer.eps
docs/manual/Figures/QCFiles/: EPRCircuit.eps  EPRCircuitLabel.eps
docs/manual/Figures/SubCircuits/: GroverCircuit.eps  GroverCircuitExpand.eps  GroverCircuitUnroll.eps
docs/poster/: Makefile  QCViewer_Abstract.tex  beamerthemeqcv.sty  grover.qc  poster.tex
docs/poster/TQCShortAbstract/: Makefile  QCV.bib  qcv.tex
docs/poster/figures/: Grover_Circuit.eps  Grover_Unrolled.eps  iqclogo.eps  uwlogo-bw-08.eps
docs/slides/: Makefile  slides.tex
doxy/: Doxyfile
gates/: RGate.cpp  UGate.cpp  UGateLookup.cpp  UGateLookup.h
src/: CMakeLists.txt  format
src/QCLib/: CMakeLists.txt  FlexLexer.h  QCLexer.h  QCLexer.l  QCParser.y  QCParserUtils.cpp  QCParserUtils.h  TFCLexer.l  TODO  circuit.cpp  circuit.h  circuitParser.cpp  circuitParser.h  circuitWriter.cpp  dirac.cpp  dirac.h  diracLexer.l  diracParser.y  diracTest.cpp  gate.cpp  gate.h  parseNode.h  qc.h  simTest.cpp  simulate.cpp  simulate.h  state.cpp  state.h  subcircuit.cpp  subcircuit.h  testParser.cpp  types.h  unistd.h  utility.cpp  utility.h
src/QCLib/QCLang/: QCLLexer.l  QCLParser.y  REPLInterpreter.cpp
src/QCLib/gates/: GateLexer.l  GateParser.y  GateParserTest.cpp  GateParserUtils.h  RGate.cpp  UGate.cpp  UGateLookup.cpp  UGateLookup.h  gates.g
src/QCLib/testCircuits/: foo.tfc
src/QCViewer/: CMakeLists.txt  ConsoleWidget.cpp  GateIcon.cpp  GateIcon.h  TODO  circuitwidget.cpp  circuitwidget.h  common.cpp  common.h  draw.cpp  draw.h  draw_internal.h  info.h  main.cpp  options.h  stateWidget.cpp  stateWidget.h  window.cpp  window.h
src/QCViewer.new/: STYLE  TODO  build  circuit.cpp  circuit.h  circuit_lexer.l  circuit_parser.y  circuit_parser_test.cpp  circuit_parser_utils.h  circuit_widget.cpp  circuit_widget.h  common.cpp  common.h  formatExample.qc  main.cpp  window.cpp  window.h
src/QCViewer/QCLib/: .gitignore  FlexLexer.h  QCLexer.h  QCLexer.l  QCParser.y  QCParserUtils.cpp  QCParserUtils.h  REQUEST  circ_matrix.cpp  circuit.cpp  circuit.h  circuitDrawer.cpp  circuitDrawer.h  circuitImage.cpp  circuitImage.h  circuitParser.h  circuitWriter.cpp  common.cpp  common.h  dirac.cpp  dirac.h  diracLexer.l  diracParser.y  draw_common.cpp  draw_common.h  draw_constants.h  gate.cpp  gate.h  hprhelpers.cpp  hprhelpers.h  mat.cpp  mat.h  mat_tests.cpp  normalize.cpp  normalize.h  parseNode.h  pdf.cpp  pdf.h  qc.h  quigl.cpp  (+16 more)
src/QCViewer/QCLib/gates/: GateLexer.l  GateParser.y  GateParserUtils.h  RGate.cpp  UGate.cpp  UGateLookup.cpp  UGateLookup.h
src/QCViewer/circuitkit/: QCParser.y  QCParserUtils.cpp  QCParserUtils.h  circuit.cpp  circuit.h  circuitParser.h  circuitWriter.cpp  gate.cpp  gate.h  qglcc.rkt  subcircuit.cpp  subcircuit.h
src/QCViewer/new/: circuit.h  new.qc
src/QCViewer/qcimage/: qcimage.cpp
src/QCViewer/qcqg/: GateParser.h  Makefile  QCLexer.l  QCParser.h  QCParser.y  QCParserUtils.cpp  QCParserUtils.h  circuit.cpp  circuit.h  circuitParser.h  gate.cpp  gate.h  qcqg.cpp  subcircuit.cpp  subcircuit.h  types.h  utility.cpp  utility.h
src/QCViewer/qcqg/gates/: GateLexer.l  GateParser.y  GateParserUtils.h  RGate.cpp  UGate.cpp  UGateLookup.cpp  UGateLookup.h
src/QCViewer/qcviewer/: qcviewer.cpp
testCircuits/: QFT10.qc  errors.qc  foo.qc  foo.tfc  fracRGate.qc  gf2^18mult_375_1671.tfc  grover_primes.qc  grover_primes.tfc  grover_primes_smaller.tfc  largeTest.tfc  mod5d4.qc  mod5d4.tfc  neg.qc  not.tfc  simple.qc  test1.qc
testCircuits/faults/: grover_primes.tfc  notes  seg2.tfc
testCircuits/oneBit/: oneBitTest.qc
utils/randCirc/: randCirc.py
